[+] 优化gradle相关代码